--- a/SalesWebMvc/Views/SalesRecords/GroupingSearchPdf.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/GroupingSearchPdf.cshtml
@@ -2,33 +2,17 @@
 
 @{
     ViewData["Title"] = "Grouping Search";
-    DateTime minDate = DateTime.Parse(ViewData["minDate"] as string);
-    DateTime maxDate = DateTime.Parse(ViewData["maxDate"] as string);
+    var minDate = DateTime.TryParse(ViewData["minDate"]?.ToString(), out var parsedMinDate)
+            ? parsedMinDate
+            : new DateTime(DateTime.Now.Year, 1, 1);
+
+    var maxDate = DateTime.TryParse(ViewData["maxDate"]?.ToString(), out var parsedMaxDate)
+        ? parsedMaxDate
+        : DateTime.Now;
 }
 
 <h2>@ViewData["Title"]</h2>
 
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-                <div class="form-group">
-                    <label for="minDate">Min Date</label>
-                    <input type="date" class="form-control" name="minDate" value=@ViewData["minDate"]>
-                </div>
-                <div class="form-group">
-                    <label for="maxDate">Max Date</label>
-                    <input type="date" class="form-control" name="maxDate" value=@ViewData["maxDate"]>
-                </div>
-            </div>
-            <!-- Gerar PDF com os filtros aplicados -->
-            <button type="submit" class="btn btn-primary">Filter</button>
-            <a href="@Url.Action("GroupingSearchPdf", "SalesRecords", new { minDate = ViewData["minDate"], maxDate = ViewData["maxDate"] })" target="_blank" class="btn btn-primary">
-                Visualizar PDF
-            </a>
-        </form>
-    </div>
-</nav>
 
 @foreach (var departmentGroup in Model)
 {
